Update for Java 26 + Peephole interface