@@ -9,10 +9,15 @@ import java.lang.classfile.CodeBuilder;
 import java.lang.classfile.CodeElement;
 import java.lang.classfile.Instruction;
 import java.lang.classfile.attribute.CodeAttribute;
+import java.lang.classfile.constantpool.ConstantPoolBuilder;
 import java.lang.classfile.instruction.ConstantInstruction;
 import java.lang.classfile.instruction.InvokeInstruction;
 import java.lang.constant.ClassDesc;
 import java.lang.constant.MethodTypeDesc;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.TreeMap;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.jar.JarOutputStream;
@@ -23,17 +28,96 @@ import static java.lang.classfile.ClassFile.LineNumbersOption.DROP_LINE_NUMBERS;
 import static java.lang.classfile.ClassTransform.transformingMethods;
 import static java.lang.classfile.Opcode.IADD;
 import static java.lang.classfile.Opcode.ISUB;
+import static java.lang.classfile.Opcode.LDC;
+import static java.lang.classfile.Opcode.LDC_W;
 import static java.nio.charset.StandardCharsets.UTF_8;
+
+/**
+ * A rewrite produced by a matching peephole: the number of elements it
+ * matched at the start of the window, and the elements that replace them.
+ */
+record Rewrite(int matched, List<CodeElement> replacement) {}
+
+/**
+ * A peephole optimisation: looks at the start of the window and, if its
+ * pattern is there, returns the rewrite to apply. Returns null if there is
+ * no match. The pool builder is for replacements that need new constant
+ * pool entries.
+ */
+interface Peephole {
+    String name();
+    Rewrite apply(CodeElement[] window, ConstantPoolBuilder pool);
+}
+
+/**
+ * Removes the redundant addition or subtraction of zero: X +- 0 -> X.
+ */
+class AddZero implements Peephole {
+    public String name() { return "addZero"; }
+
+    public Rewrite apply(CodeElement[] window, ConstantPoolBuilder pool) {
+        if (window[0] instanceof ConstantInstruction c && c.constantValue().equals(0) &&
+            window[1] instanceof Instruction i && (i.opcode() == IADD || i.opcode() == ISUB)) {
+            // Replace the two matched elements with nothing.
+            return new Rewrite(2, List.of());
+        }
+        return null;
+    }
+}
+
+/**
+ * Merges two consecutive StringBuilder.append calls with constant strings:
+ * append("foo").append("bar") -> append("foobar").
+ */
+class AppendMerge implements Peephole {
+    public String name() { return "appendMerge"; }
+
+    public Rewrite apply(CodeElement[] window, ConstantPoolBuilder pool) {
+        if (window[0] instanceof ConstantInstruction c1 && c1.constantValue() instanceof String s1 &&
+            window[1] instanceof InvokeInstruction i1 &&
+            i1.owner().asSymbol().equals(ClassDesc.of("java.lang.StringBuilder")) &&
+            i1.method().name().equalsString("append") &&
+            i1.typeSymbol().equals(MethodTypeDesc.of(ClassDesc.of("java.lang.StringBuilder"), ClassDesc.of("java.lang.String"))) &&
+            window[2] instanceof ConstantInstruction c2 && c2.constantValue() instanceof String s2 &&
+            window[3] instanceof InvokeInstruction i2 &&
+            i2.owner().equals(i1.owner()) && i1.method().equals(i2.method()) && i1.type().equals(i2.type())
+        ) {
+            var concat = s1 + s2;
+
+            // Replace with the concatenated string constant, if it fits.
+            // ldc takes a one byte constant pool index; use ldc_w otherwise.
+            if (concat.getBytes(UTF_8).length <= 65535) {
+                var entry = pool.stringEntry(concat);
+                return new Rewrite(4, List.of(
+                    ConstantInstruction.ofLoad(entry.index() <= 0xFF ? LDC : LDC_W, entry),
+                    i2));
+            }
+        }
+        return null;
+    }
+}
 
 /**
  * Optimize the bytecode in a given jar by applying peephole optimizations.
  */
-@SuppressWarnings("preview")
 public class Optimizer {
 
+    /**
+     * The peephole optimisations to apply. Add new optimisations here.
+     */
+    private static final List<Peephole> PEEPHOLES = List.of(
+        new AddZero(),
+        new AppendMerge()
+    );
+
+    /**
+     * The total number of times each peephole matched, printed at the end.
+     */
+    private static final Map<String, Integer> matchCounts = new TreeMap<>();
+
     public static void main(String[] args) {
-        if (args.length < 2 || args.length > 3) {
-            System.err.println("Usage: java --enable-preview Optimizer.java <input-jar> <output-jar> [number of passes: default 1]");
+        if (args.length != 2) {
+            System.err.println("Usage: java Optimizer.java <input-jar> <output-jar>");
             System.exit(1);
         }
 
@@ -48,20 +132,10 @@ public class Optimizer {
             output.delete();
         }
 
-        var numberOfPasses = 1;
-        if (args.length == 3) {
-            try {
-                numberOfPasses = Integer.parseInt(args[2]);
-            } catch (NumberFormatException e) {
-                System.err.println("Invalid number of passes: " + args[2]);
-                System.exit(3);
-            }
-        }
-
-        optimizeJar(input, output, numberOfPasses);
+        optimizeJar(input, output);
     }
 
-    private static void optimizeJar(File input, File output, int numberOfPasses) {
+    private static void optimizeJar(File input, File output) {
         try (
             var jarFile      = new JarFile(input);
             var outputStream = new JarOutputStream(new BufferedOutputStream(new FileOutputStream(output)))
@@ -83,13 +157,7 @@ public class Optimizer {
                         var originalBytes = inputStream.readAllBytes();
 
                         try {
-                            var optimizedBytes = originalBytes;
-
-                            for (int pass = 0; pass < numberOfPasses; pass++) {
-                                optimizedBytes = optimizeClass(resolver, optimizedBytes);
-                            }
-
-                            outputStream.write(optimizedBytes);
+                            outputStream.write(optimizeClass(resolver, originalBytes));
                         } catch (Exception e) {
                             // If there's an error during optimization,
                             // copy over the original bytes instead.
@@ -105,6 +173,9 @@ public class Optimizer {
                     outputStream.closeEntry();
                 }
             }
+
+            // Print a summary of the applied optimisations.
+            matchCounts.forEach((name, count) -> System.out.println(name + ": " + count));
         } catch (IOException e) {
             System.err.println("Error: " + e.getMessage());
         }
@@ -133,51 +204,60 @@ public class Optimizer {
 
     private static void optimizeCodeAttribute(CodeAttribute codeAttribute, CodeBuilder codeBuilder) {
         var windowSize = 5;
-        var elements = codeAttribute.elementList();
+        var elements = new ArrayList<>(codeAttribute.elementList());
         var currentIndex = 0;
+
+        // The rewrite budget guards against peepholes that undo each other's
+        // work and would otherwise keep rewriting forever: no converging set
+        // of peepholes gets anywhere near it. Exhausting it fails the class,
+        // which is then copied to the output unoptimised.
+        var budget = elements.size() * 4;
 
         while (currentIndex < elements.size()) {
             // Create a fixed size window with up to windowSize elements and the remainder nulls.
+            //
+            // Since line numbers and debug info were dropped when parsing, instructions
+            // sit directly next to each other in the window. The pseudo-instructions that
+            // remain (labels marking jump targets and exception handler ranges) do not
+            // match any pattern and therefore end any potential match. This is essential
+            // for correctness, not just a simplification: a label in the middle of a
+            // matched pattern is a position that other code can jump to, and rewriting
+            // across it would change what that jumping code executes.
             var window = new CodeElement[windowSize];
             for (int i = 0; i < windowSize && currentIndex + i < elements.size(); i++) {
                 window[i] = elements.get(currentIndex + i);
             }
 
-            // Optimize X +- 0 -> X
-            if (window[0] instanceof ConstantInstruction c && c.constantValue().equals(0) &&
-                window[1] instanceof Instruction i && (i.opcode() == IADD || i.opcode() == ISUB)) {
-                // Skip the two matched elements and emit no new elements.
-                currentIndex += 2;
-                continue;
-            }
-
-            // Optimize append("foo").append("bar") -> append("foobar")
-            if (window[0] instanceof ConstantInstruction c1 && c1.constantValue() instanceof String s1 &&
-                window[1] instanceof InvokeInstruction i1 &&
-                i1.owner().asSymbol().equals(ClassDesc.of("java.lang.StringBuilder")) &&
-                i1.method().name().equalsString("append") &&
-                i1.typeSymbol().equals(MethodTypeDesc.of(ClassDesc.of("java.lang.StringBuilder"), ClassDesc.of("java.lang.String"))) &&
-                window[2] instanceof ConstantInstruction c2 && c2.constantValue() instanceof String s2 &&
-                window[3] instanceof InvokeInstruction i2 &&
-                i2.owner().equals(i1.owner()) && i1.method().equals(i2.method()) && i1.type().equals(i2.type())
-            ) {
-                var concat = s1 + s2;
-
-                // Emit the concatenated string constant, if it fits.
-                if (concat.getBytes(UTF_8).length <= 65535) {
-                    codeBuilder
-                        .ldc(concat)
-                        .invokevirtual(i1.owner().asSymbol(), i1.method().name().stringValue(), i1.typeSymbol());
-
-                    // Skip the four matched instructions.
-                    currentIndex += 4;
-                    continue;
+            // Try each peephole in turn; the first that matches wins.
+            Rewrite rewrite = null;
+            for (var peephole : PEEPHOLES) {
+                if ((rewrite = peephole.apply(window, codeBuilder.constantPool())) != null) {
+                    matchCounts.merge(peephole.name(), 1, Integer::sum);
+                    break;
                 }
             }
 
-            // No optimizations, so continue to the next element.
-            codeBuilder.accept(elements.get(currentIndex++));
+            if (rewrite == null) {
+                // Nothing matched here; slide the window forward.
+                currentIndex++;
+                continue;
+            }
+
+            if (--budget < 0) {
+                throw new IllegalStateException("peepholes are not converging");
+            }
+
+            // Splice the replacement over the matched elements...
+            elements.subList(currentIndex, currentIndex + rewrite.matched()).clear();
+            elements.addAll(currentIndex, rewrite.replacement());
+
+            // ...and back the window up over the seam, so a rewrite enabled
+            // by this one (on either side of it) is found in the same sweep.
+            currentIndex = Math.max(0, currentIndex - (windowSize - 1));
         }
+
+        // Emit the optimised elements.
+        elements.forEach(codeBuilder::accept);
     }
 
     /**
